--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jimdelois/marina#readme",
   "dependencies": {
     "bunyan": "^1.8.12",
+    "sprintf-js": "^1.1.2",
     "yargs": "^13.2.0"
   }
 }
