--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "bunyan": "^1.8.12",
     "docker-compose": "^0.12.0",
+    "inquirer": "^6.2.2",
     "sprintf-js": "^1.1.2",
     "yargs": "^13.2.0"
   },
