--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "docker-compose": "^0.12.0",
     "inquirer": "^6.2.2",
     "sprintf-js": "^1.1.2",
+    "uuid": "^3.3.2",
     "yargs": "^13.2.0"
   },
   "devDependencies": {
