Adding Version Script

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "build": "pkg --targets node10-macos-x64 --out-path ./build/ --options no-warnings ./package.json",
     "build-all": "pkg --targets node10-macos-x64,node10-linux-x64,node10-win-x64 --out-path ./build/ --options no-warnings ./package.json",
-    "clean": "rm -rf ./build"
+    "clean": "rm -rf ./build",
+    "version": "echo $npm_package_version"
   },
   "dependencies": {
     "bunyan": "^1.8.12",
